# raytracer-v2

./: .gitignore  Cargo.toml  README.md
res/: san-miguel.json  sponza.json  wirokit.json  wirokit.mtl
src/: camera.rs  intersection.rs  light.rs  main.rs  material.rs  renderer.rs  scene.rs  transform.rs  triangle.rs  utils.rs  vertex.rs
