[package]
name = "raytracer-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bvh = "0.7.2"
clap = "4.1.11"
glam = "0.23.0"
image = "0.24.5"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tobj = "3.2.4"
